Completed calibration code.

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,100 +1,51 @@
 # Makefile for ini_to_desmos.cpp
 
-CXX = g++
-PATHS = ../PROGRAMS/dependencies/eigen-3.4.0
+PATHS = ../PROGRAMS/dependencies/eigen-3.4.0 
 
-CXXFLAGS = -std=c++17 -g -I $(PATHS)
-TARGETS = parse_ini orient_ini
-SRC = ini_to_desmos.cpp \
-orient_ini.cpp
-
-all: $(TARGETS)
-
-parse_ini: $(SRC)
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(SRC)
-
-orient_ini: $(SRC)
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(SRC)
-
-
-clean:
-	rm -f $(TARGET)
-
-.PHONY: all clean
-
-# Compiler and flags
-CXX = g++
-CXXFLAGS = -std=c++17 -O2 -Wall
+CXXFLAGS = -std=c++17 -g -I $(PATHS) -I ../PROGRAMS
 
 # Project structure
 SRC_DIR = .
-PROG_DIR = ./PROGRAMS
+PROG_DIR = ../PROGRAMS
 
 # Source files
-SRCS = $(SRC_DIR)/orient_ini.cpp \
-       $(SRC_DIR)/ini_helpers.cpp \
-       $(PROG_DIR)/Matrix.cpp \
-       $(PROG_DIR)/helperFunctions.cpp
+SRCS = $(PROG_DIR)/Matrix.cpp \
+	   $(PROG_DIR)/Transform.cpp \
+       
+
+
+# Header files
+HEADERS = ../Point.h \
+          ../NewTransform.h \
+		  $(PROG_DIR)/Matrix.h \
+		  $(PROG_DIR)/Transform.h \
+		  $(SRC_DIR)/ini_helpers.h \
+		  $(PROG_DIR)/helperFunctions.h
 
 # Object files
 OBJS = $(SRCS:.cpp=.o)
 
 # Output binary
-TARGETS = orient_ini 
+TARGETS = orient_ini ini_to_desmos
 
 # Build target
-all: $(TARGET)
+all: $(TARGETS)
 
-$(TARGET): $(OBJS)
+orient_ini: orient_ini.o $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $@ $^
+
+
+ini_to_desmos: ini_to_desmos.o $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
 # Compile source to object
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
-# Clean up
-clean:
-	rm -f $(TARGET) $(OBJS)
-
-.PHONY: all clean
-
-
-CXX = g++
-CXXFLAGS = -g -Wall -Wextra -std=c++17
-
-# Source files
-SRC = 
-# Header files
-HEADERS = ../PROGRAMS/Matrix.h \
-
-
-# Object files
-OBJ = $(SRC:.cpp=.o)
-
-# Output executables
-TARGETS = forward_inverse_kinematic_comparison get_test_grid #inverse_kinematics_test kinematics_end_effector_analysis_test
-
-all: $(TARGETS)
-
-
-#inverse_kinematics_test: inverse_kinematics_test.o forward_kinematics.o inverse_kinematics.o
-#	$(CXX) $(CXXFLAGS) -o $@ $^
-
-#kinematics_end_effector_analysis_test: kinematics_end_effector_analysis_test.o forward_kinematics.o inverse_kinematics.o
-#	$(CXX) $(CXXFLAGS) -o $@ $^
-#
-get_test_grid: get_test_grid.o forward_kinematics.o inverse_kinematics.o
-	$(CXX) $(CXXFLAGS) -o $@ $^
-
-
-
-forward_inverse_kinematic_comparison: forward_inverse_kinematic_comparison.o forward_kinematics.o inverse_kinematics.o
-	$(CXX) $(CXXFLAGS) -o $@ $^
-
 %.o: %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+	
 
+# Clean up
 clean:
-	rm -f $(OBJ) $(TARGETS)
+	rm -f $(TARGETS) $(OBJS) *.o
 
+.PHONY: all clean
